--- a/app/assets/stylesheets/report/reports.css.scss
+++ b/app/assets/stylesheets/report/reports.css.scss
@@ -105,14 +105,14 @@ $list-width: 220px;
 // #right part
 .report-content {
   @include box-sizing-border;
-  float: left;
-  height: calc(100% - 70px);
-  width: calc(100% - 220px);
+  //float: left;
+  //height: calc(100% - 40px);
+  //width: calc(100% - 220px);
   // >>>>>>>>>>>>>>>>>>>current status
   .current-status {
     .header {
       width: 100%;
-      height: 100px;
+      height: 70px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.2);
       $margin-top: 8px;
       &:after {
@@ -162,10 +162,10 @@ $list-width: 220px;
         }
         &:last-of-type {
           width: calc(70% - 600px);
-          height: 85px;
+          height: 55px;
           p {
-            padding: 10px 0 0 17px;
-            font-size: 29px;
+            padding: 0 0 0 17px;
+            font-size: 25px;
             color: #333
           }
         }
@@ -211,7 +211,7 @@ $list-width: 220px;
   width: 20px;
   height: 20px;
   top: 55%;
-  left: 60%;
+  left: 50%;
   margin: -10px 0 0 -10px;
   border-radius: 50%;
   visibility: hidden;
