--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,50 +1,58 @@
 <section class="current-status" id="current-status">
   <section id="current-status-normal">
-    <div class="header" id="current-status-header">
+    <div class=" col-sm-12" id="current-status-header">
 
-      <div class="header-block">
+      <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
         <label>Condition</label>
 
-        <p style="font-size: 12px;">First Time Quality (FTQ) Summary Percentage</p>
+        <p>First Time Quality (FTQ) Summary Percentage</p>
 
         <p id="current-date" style="font-size: 12px;"></p>
 
-        <p>Early shift</p>
+        <!--<p>Early shift</p>
         <select id="vehicle-select" style="font-size: 12px;">
+          <option value="P1">P1</option>
+          <option value="P2">P2</option>
+          <option value="P3">P3</option>
+        </select>-->
+      </div>
+
+      <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
+        <p>Early shift</p>
+        <select id="vehicle-select" style="min-width: 200px;text-align: center;">
           <option value="P1">P1</option>
           <option value="P2">P2</option>
           <option value="P3">P3</option>
         </select>
       </div>
+      <!--
+            <div class="header-block">
+              <label>Export</label>
+              <a class="btn btn-success" id="quick-print">Quick print</a>
+              <a class="btn btn-success" onclick="export_report_excel()">Excel</a>
+            </div>
 
-      <div class="header-block">
-        <label>Export</label>
-        <a class="btn btn-success" id="quick-print">Quick print</a>
-        <a class="btn btn-success" onclick="export_report_excel()">Excel</a>
-      </div>
+            <div class="header-block">
+              <label>Setting</label>
+              <a class="btn btn-primary" id="refresh">Refresh</a>
+              <a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>
+            </div>
 
-      <div class="header-block">
-        <label>Setting</label>
-        <a class="btn btn-primary" id="refresh">Refresh</a>
-        <a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>
-      </div>
-
-      <div class="header-block">
-        <label>Custom</label>
-        <a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>
-        <a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>
-      </div>
-
-      <div class="header-block">
+            <div class="header-block">
+              <label>Custom</label>
+              <a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>
+              <a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>
+            </div>
+      -->
+      <div class="col-sm-4" style="text-align: center;">
         <label>Current time</label>
 
-        <p id="current-clock"></p>
+        <p id="current-clock" style="font-size: 30px;font-weight: bold;"></p>
       </div>
     </div>
+
     <div id="data_container" class="data-container">
-
     </div>
-
     <!--<%= render 'snap' %>-->
   </section>
 
@@ -93,139 +101,88 @@
     </div>
   </section>
 </section>
+<!--
 
 <div id="current_status_loader" class="current-status-pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z">
-  <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none">
+  <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 10 60" preserveAspectRatio="none">
     <path d="M30,30 50,30 50,30 30,30 Z"/>
   </svg>
-</div><!-- /pageload-overlay -->
+</div>&lt;!&ndash; /pageload-overlay &ndash;&gt;
+-->
 
-
+<!--
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag "reports/current_status" %>
     <%= javascript_include_tag "reports/defects" %>
-<% end %>
+<% end %>-->
 
 <script>
     $(document).ready(function () {
 //        Report.init("current_status");
+        /*时间刷新*/
+        window.setInterval(function () {
+            $("#current-clock").text(format_time.current_time_clock());
+        }, 700);
+
+        /*设置整体背景颜色*/
         var ClientHeight = document.documentElement.clientHeight;
         $('#data_container').css({
             height: (ClientHeight - 100) + 'px'
         });
 
-
-
-        /* for (var j = 0; j < 21; j = j + 8) {
-         /!*分组*!/
-         }
-         */
-
-//        for (var i = 0; i < 8; i++) {
-//            if (i < 3) {
-//                console.log("<3===" + i);
-//                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
-//                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
-//                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
-//                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif",:class => 'col-md-3',:style=>'margin-top:60px;'%></div>').appendTo('#data_container').ready(function () {
-//                });
-//            } else if (i == 3) {
-//                console.log("3===" + i);
-//                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
-//                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
-//                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
-//                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif",:class => 'bottom-arrow'%></div>').appendTo('#data_container').ready(function () {
-//                });
-//            } else if (i == 4) {
-//                console.log("4===" + i);
-//                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
-//                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
-//                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
-//                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif" ,:class => 'left-arrow col-md-3' %> <%= image_tag "/assets/auto_arrow.gif" ,:class => 'bottom-arrow' %></div>').appendTo('#data_container').ready(function () {
-//                });
-//            } else if (i > 4 && i < 7) {
-//                console.log("4<i<6===" + i);
-//                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
-//                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
-//                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
-//                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif" ,:class => 'left-arrow col-md-3' %></div>').appendTo('#data_container').ready(function () {
-//                });
-//            } else if (i == 7) {
-//                console.log("7===" + i);
-//                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
-//                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
-//                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
-//                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div></div>').appendTo('#data_container').ready(function () {
-//                });
-//            }
-//        }
         loadData();
     });
 
-    function loadData( ){
-
-        var productLine=$('#vehicle-select').val();
+    function loadData() {
+        var productLine = $('#vehicle-select').val();
         console.log(productLine);
-        $.get('/departments/entity_groups',{product_line:productLine},function(data){
+        loading_show();
+        $.get('/departments/entity_groups', {product_line: productLine}, function (data) {
             console.log(data);
             $('.workstation').remove();
-            for(var i= 0;i<data.length;i++){
-                $('<div class="col-md-3 workstation"><div class="col-sm-9"><div class="box">' +
-                '<div class="box-title">'+data[i].name+'</div><div style="display: inline-flex"><div class="left-number">'+data[i].value+'</div>' +
-                '<div class="right-content"><div class="content"><strong>'+data[i].target_max+'</strong><p>Max Target</p></div>' +
-                '<div class="content"><strong>'+data[i].target_min+'</strong><p>Min Target</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif",:class => 'col-md-3',:style=>'margin-top:60px;'%></div>').appendTo('#data_container').ready(function () {
+            for (var i = 0; i < data.length; i++) {
+                $('<div class="col-md-3 workstation"><div class="box">' +
+                        '<div class="box-title">' + data[i].name + '</div><div style="display:inline-flex;width: 100%;"><div class="left-number">' + data[i].value + '</div>' +
+                        '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
+                        '<div class="content"><strong>' + data[i].target_min + '</strong><p>Min Target</p></div></div></div></div></div>').appendTo('#data_container').ready(function () {
+                    loading_hide();
                 });
             }
-        },'JSON');
+        }, 'JSON');
     }
-    $("#vehicle-select").change(function(){
+    $("#vehicle-select").change(function () {
         loadData();
     });
-        window.setInterval("loadData()",20000);
-</script>
 
+    window.setInterval("loadData()", 200000000);
+    var loading;
+    function loading_show() {
+        loading = new SVGLoader(document.getElementById('preloader'), {speedIn: 100});
+        $(".pageload-overlay svg").css('left', '0px');
+        $(".pageload-overlay svg").css('top', '140px');
+        loading.show();
+    }
+
+    function loading_hide() {
+        $('#preloader').remove();
+
+        $('<div id="preloader" class="pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none"><path d="M30,30 50,30 50,30 30,30 Z"/></svg></div>').appendTo('body').ready(function () {
+        })
+    }
+</script>
 
 <style>
     .background {
         margin-top: 10px;
-        /*background: linear-gradient(to bottom right, #cccccc, #fefefe);*/
         background: #000;
         border-radius: 20px;
         min-width: 1200px;
     }
 
-    .message {
-        margin: 30px 0 0 30px;
-        display: flex;
-    }
-
-    .production {
-        width: 400px;
-        height: 60px;
-        border-radius: 15px;
-        color: #ffffff;
-        font: 40px 'Helvetica';
-        background: #535b6e;
-        margin: 10px 0 0 20px;
-        text-align: center;
-        line-height: 60px;
-    }
-
-    .message > img {
-        margin: 20px 0 0 0;
-    }
-
-    .message > span {
-        text-align: right;
-        font: 40px 'Helvetica';
-        color: #ffffff;
-        margin: 20px 0 0 50px;
-    }
-
     /*Box Start*/
     .box {
-        width: 280px;
-        height: 170px;
+        min-width: 230px;
+        height: 160px;
         border-radius: 10px;
         /*border: 2px solid #9000ff;*/
         border: 2px solid deepskyblue;
@@ -248,12 +205,16 @@
         height: 100px;
         line-height: 100px;
         color: #3ed436;
-        margin-left: 10px;
+        margin-left: 0;
+        width: 55%;
+        text-align: center;
     }
 
     .right-content {
+        width: 45%;
         height: 100px;
         text-align: right;
+        margin-right: 5px;
     }
 
     .content:first-child {
@@ -271,33 +232,4 @@
     }
 
     /*Box End*/
-
-    /*Arrow Start*/
-
-    .right-arrow {
-        height: 48px;
-        margin-top: 80px;
-        width: 48px;
-        margin-left: 30px;
-    }
-
-    .bottom-arrow {
-        transform: rotate(90deg);
-        margin-left: 130px;
-        height: 48px;
-    }
-
-    .left-arrow {
-        height: 48px;
-        width: 48px;
-        margin-left: 30px;
-        transform: rotate(180deg);
-        margin-top: 80px;
-    }
-
-    /*Arrow End*/
-
-    .col-md-3 {
-        padding: 0;
-    }
 </style>
