update plc service

--- a/app/views/production_plans/_form.html.erb
+++ b/app/views/production_plans/_form.html.erb
@@ -29,11 +29,7 @@
       <%= f.number_field :produced %>
     </div>
     <div class="field">
-      <%= f.label :trigger_min, '下限' %><br/>
-      <%= f.number_field :trigger_min %>
-    </div>
-    <div class="field">
-      <%= f.label :trigger_max, '上限' %><br/>
+      <%= f.label :trigger_max, '警戒值' %><br/>
       <%= f.number_field :trigger_max %>
     </div>
     <div class="field">
