--- a/app/views/production_plans/show.html.erb
+++ b/app/views/production_plans/show.html.erb
@@ -21,12 +21,7 @@
 </p>
 
 <p>
-  <b>下限:</b>
-  <%= @production_plan.trigger_min %>
-</p>
-
-<p>
-  <b>上限:</b>
+  <b>警戒值:</b>
   <%= @production_plan.trigger_max %>
 </p>
 
