--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -190,14 +190,14 @@
                     });
                 });
     });
-    var ClientHeigth = document.documentElement.clientHeight;
+    var ClientHeight = document.documentElement.clientHeight;
 
     $('.my_icon').css({
-        marginTop: (ClientHeigth) / 2 + 'px'
+        marginTop: (ClientHeight) / 2 + 'px'
     });
 
     $('#pop-crate').css({
-        height: (ClientHeigth - 70) + 'px'
+        height: (ClientHeight - 70) + 'px'
     });
 
     $('#pop-crate').click(function () {
