--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -23,7 +23,7 @@
                 <a href="<%= departments_path %>"><%= t 'menu.entity' %></a>
               </li>
               <li>
-              <a href="<%= production_plans_path %>">生产计划</a>
+              <a href="<%= production_plans_path %>"><%= t 'menu.production_plan' %></a>
             </li>
               <li>
                 <a href="/oauth/applications">OAuth</a>
