--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -72,8 +72,7 @@
         var ClientHeight = $(document).height();
         $('#report-content').css({
             height: (ClientHeight - 70) + 'px',
-            overflow: 'auto',
-            background: '#fefefe'
+            overflow: 'auto'
         });
 
         window.setInterval(function () {
@@ -137,7 +136,7 @@
             });
 
             yAxis_value.push(ajaxData[i].name);
-            charts_value.push(Math.round(ajaxData[i].value / 1000));
+            charts_value.push(ajaxData[i].value);
             charts_target_max.push(ajaxData[i].target_max);
             charts_target_min.push(ajaxData[i].target_min);
         }
@@ -156,7 +155,6 @@
                 title: {text: 'Time(s)'},
                 plotLines: [{value: 0, width: 1, color: '#808080'}]
             },
-
             tooltip: {valueSuffix: 's'},
 
             legend: {layout: 'vertical', align: 'right', verticalAlign: 'middle', borderWidth: 0},
