--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -14,10 +14,10 @@
     <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
       <p>Early shift</p>
       <select id="vehicle-select" style="min-width: 200px;text-align: center;">
-        <option value="滚筒内装配线">滚筒内装配线</option>
-        <option value="滚筒箱体线">滚筒箱体线</option>
-        <option value="滚筒总装线">滚筒总装线</option>
-        <option value="滚筒包装线">滚筒包装线</option>
+        <option value="Drum Assembly Line">Drum Assembly Line</option>
+        <option value="Cabinet Assembly Line">Cabinet Assembly Line</option>
+        <option value="Main Assembly Line">Main Assembly Line</option>
+        <option value="Packaging Line">Packaging Line</option>
       </select>
     </div>
 
