--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -42,11 +42,11 @@
     </tr>
     </thead>
     <tbody class="tbody-tr">
-    <tr class="tbody-target-max">
-    </tr>
     <tr class="tbody-target-min">
     </tr>
     <tr class="tbody-value">
+    </tr>
+    <tr class="tbody-target-max">
     </tr>
     </tbody>
   </table>
@@ -77,7 +77,7 @@
 
         window.setInterval(function () {
             $("#current-clock").text(format_time.current_time_clock());
-        }, 700);
+        }, 500);
 
         var ClientWidth = document.documentElement.clientWidth;
         $('#data_container').css({width: (ClientWidth - 230) + 'px', overflowX: 'auto'});
@@ -149,6 +149,9 @@
             credits: {
                 enabled: false
             },
+            colors: ['#8DB6CD', '#43CD80', '#CD8162', '#24CBE5', '#64E572', '#FF9655',
+                '#FFF263', '#6AF9C4']
+            ,
             xAxis: {categories: yAxis_value},
 
             yAxis: {
@@ -160,17 +163,13 @@
             legend: {layout: 'vertical', align: 'right', verticalAlign: 'middle', borderWidth: 0},
 
             /*分组堆叠显示*/
-            plotOptions: {
-                column: {
-                    stacking: 'normal'
-                }
-            },
-
+            /* plotOptions: {
+             column: {
+             stacking: 'normal'
+             }
+             },*/
             series: [
                 {
-                    name: 'TargetMax',
-                    data: charts_target_max
-                }, {
                     name: 'TargetMin',
                     data: charts_target_min
                 },
@@ -178,6 +177,9 @@
                     type: 'column',
                     name: 'Value',
                     data: charts_value
+                }, {
+                    name: 'TargetMax',
+                    data: charts_target_max
                 }
             ]
         });
