--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -8,7 +8,7 @@
       <li number="0"><a menu="current_status" href="#current_status"><i class="icon-adjust mark"></i> Current
         Status<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="daily_fstq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
+      <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
         WorkingTime Detail<i class="icon-chevron-right indicate"></i></a></li>
 
       <!-- <li number="8"><a menu="daily_dpv" href="#daily_dpv"><i class="icon-columns mark"></i> Daily DPV&SDPV<i class="icon-chevron-right indicate"></i></a></li>
