--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -143,7 +143,7 @@
                    readonly=true/>
             <label class="index-date-extra-info"></label>
           </div>
-          <div class="index-condition-group" style="width:100px;display: none">
+          <div class="index-condition-group" style="width:100px;">
             <label class="analytics-radio-label">
               <input type="radio" name="chartRadios" value="1" checked>
               <%= t 'dashboard_group.dashboard.serie.total' %>
