--- a/app/views/production_plans/_form.html.erb
+++ b/app/views/production_plans/_form.html.erb
@@ -13,7 +13,7 @@
     <% end %>
     <div class="field">
       <%= f.label :product_line, '*生产线' %><br/>
-      <%= f.text_field :product_line %>
+      <%= f.text_field :product_line ,value:'滚筒总装线'%>
     </div>
     <div class="field">
       <%= f.label :assembly, '*型号' %><br/>
